assignment-history: add Assignment proposal and hygiene; keep other history intact

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.ipynb_checkpoints/
+# keep only Assignment, ignore everything else
+/*
+!/Assignment/
+!/.gitignore
+!/README.md
+!/LICENSE
+# inside Assignment: avoid redistributing large binaries
+/Assignment/**/*.pdf
+/Assignment/**/*.pptx
+/Assignment/**/*.docx
+/Assignment/**/*.xlsx
+# OS/editor noise
 .DS_Store
-__pycache__/
-*.pyc
+*.log
