gitignore: remove broad Assignment extension ignores to allow specific file whitelist to work reliably

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 !/Assignment/
 !/Wk*/
 !/Wk */
-# Ignore common large binaries only in Assignment
-/Assignment/**/*.pdf
-/Assignment/**/*.pptx
-/Assignment/**/*.docx
-/Assignment/**/*.xlsx
+# Ignore common large binaries only in Assignment (removed broad extension rules to allow targeted exceptions)
 # OS/editor noise
 .DS_Store
 *.log
