Add Mac-setup and Uni-setup directories with PsyLLM and LM Studio scripts

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Local model checkpoints for Assignment 2 (kept out of git)
 Assignment 2/psy-llm-local/models/
 Assignment 2/psy-llm-local/models/**
+Assignment 2/Uni-setup/psy-llm-local/models/
+Assignment 2/Uni-setup/psy-llm-local/models/**
+Assignment 2/Mac-setup/psy-llm-local/models/
+Assignment 2/Mac-setup/psy-llm-local/models/**
 
 # Python/Jupyter caches (should never be committed)
 .ipynb_checkpoints/
