chore: scaffold frozen data trees for studies A–C

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,12 @@ Assignment/Samples/**
 !/Assignment/Samples/Good Aria/tdcs for depression Aria Dissertaion.pdf
 
 # Local PsyLLM weights (Mac/Uni setups) - do NOT track in git
+# Legacy top-level setups
+Assignment 2/Mac-setup/psy-llm-local/models/
+Assignment 2/Mac-setup/psy-llm-local/models/**
+Assignment 2/Uni-setup/psy-llm-local/models/
+Assignment 2/Uni-setup/psy-llm-local/models/**
+
+# Canonical benchmark setups
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/**
