--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ Assignment 2/Uni-setup/psy-llm-local/models/**
 # Canonical benchmark setups
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/**
+
+# Local Dissertation prototype clone - keep entirely local, never tracked
+Assignment/Misc/Dissertation/
+
+# Local benchmark environments and coverage (Mac-setup)
+Assignment 2/reliable_clinical_benchmark/Mac-setup/.psy-benchmark-env/
+Assignment 2/reliable_clinical_benchmark/Mac-setup/.mh-llm-benchmark-env/
+Assignment 2/reliable_clinical_benchmark/Mac-setup/.coverage
