Ignore Course Material dissertation folder

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,9 @@ Assignment 2/Uni-setup/psy-llm-local/models/**
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/
 Assignment 2/reliable_clinical_benchmark/*-setup/psy-llm-local/models/**
 
-# Local Dissertation prototype clone and dissertation artefacts - keep entirely local, never tracked
+# Local Dissertation prototype clone - keep entirely local, never tracked
 Assignment/Misc/Dissertation/
 Course Material/Assignment/Misc/Dissertation/
-Course Material/Assignment/My Dissertaion/
 
 # Local benchmark environments and coverage (Mac-setup)
 Assignment 2/reliable_clinical_benchmark/Mac-setup/.psy-benchmark-env/
