--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ Course Material/Assignment/My Dissertaion/
 Assignment 2/reliable_clinical_benchmark/Mac-setup/.psy-benchmark-env/
 Assignment 2/reliable_clinical_benchmark/Mac-setup/.mh-llm-benchmark-env/
 Assignment 2/reliable_clinical_benchmark/Mac-setup/.coverage
+
+# Local benchmark coverage (Uni-setup)
+Assignment 2/reliable_clinical_benchmark/Uni-setup/.coverage
