chore: untrack AI usage log until final submission
- Remove AI_USAGE_LOG.md from tracking
- Add to .gitignore to keep it local until project completion
- File will be committed at final submission

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ Assignment 2/reliable_clinical_benchmark/Mac-setup/.coverage
 
 # Local benchmark coverage (Uni-setup)
 Assignment 2/reliable_clinical_benchmark/Uni-setup/.coverage
+
+# AI Usage Log - keep untracked until final submission
+Course Material/Misc/AI_USAGE_LOG.md
