--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ Assignment 2/reliable_clinical_benchmark/Uni-setup/.coverage
 # AI Usage Log - keep untracked until final submission
 Course Material/Misc/AI_USAGE_LOG.md
 
+# Uni-setup misc notes (keep local/untracked)
+Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/
+Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/**
+
 # Literature Review PDFs - do not commit large PDF files
 Assignment 2/Literature Review/sources/**/*.pdf
 Assignment 2/Literature Review/sources/**/*.html
