--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,11 @@ Assignment 2/Literature Review/sources/**/*.html
 # Literature Review Misc guides - keep local/untracked
 Assignment 2/Literature Review/sources/Misc/
 Assignment 2/Literature Review/sources/Misc/**
+
+# Literature Review processing outputs and intermediate artefacts - keep local/untracked
+Assignment 2/Literature Review/test_output/
+Assignment 2/Literature Review/test_output/**
+Assignment 2/Literature Review/processing/
+Assignment 2/Literature Review/processing/**
+Assignment 2/Literature Review/processed/
+Assignment 2/Literature Review/processed/**
