--- a/.gitignore
+++ b/.gitignore
@@ -70,9 +70,14 @@ Course Material/Misc/AI_USAGE_LOG.md
 Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/
 Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/**
 
-# Literature Review PDFs - do not commit large PDF files
+# Literature Review sources folder - keep local/untracked (PDFs, extracted data, etc.)
+# Note: Some important files like README.md and PRIORITY_READING_LIST.csv are tracked
 Assignment 2/Literature Review/sources/**/*.pdf
 Assignment 2/Literature Review/sources/**/*.html
+Assignment 2/Literature Review/sources/**/extracted_data/
+Assignment 2/Literature Review/sources/**/extracted_data/**
+Assignment 2/Literature Review/sources/**/images/
+Assignment 2/Literature Review/sources/**/images/**
 
 # Literature Review Misc guides - keep local/untracked
 Assignment 2/Literature Review/sources/Misc/
