chore: add internal materials and course samples to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,19 @@ Assignment 2/Literature Review/processed/**
 Assignment 2/papers/
 Assignment 2/papers/**
 
+# Internal supervisor materials (keep local/untracked)
+Assignment 2/docs/supervisor/
+Assignment 2/docs/supervisor/**
+
+# Internal writing guides (keep local/untracked)
+Assignment 2/docs/Guides/Report_Writing_Guide.*
+
+# Course material - early papers and samples (keep local/untracked)
+Course Material/Assignment/Misc/Papers/
+Course Material/Assignment/Misc/Papers/**
+Course Material/Assignment/Samples/
+Course Material/Assignment/Samples/**
+
 # Local tooling venvs (keep local/untracked)
 .venv-git-tools/
 .venv-git-tools/**
