--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ Assignment 2/reliable_clinical_benchmark/Uni-setup/logs/
 Assignment 2/reliable_clinical_benchmark/Uni-setup/logs/**
 
 # Uni-setup results cache backups / smoke outputs (generated artefacts)
+Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_a_generations.jsonl
+Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_b_generations.jsonl
+Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_c_generations.jsonl
 Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_a_generations.jsonl.bak-*
 Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_b_generations.jsonl.bak-*
 Assignment 2/reliable_clinical_benchmark/Uni-setup/results/**/study_a_generations.smoke-*.jsonl
