chore: update .gitignore and untrack audit/warp files

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,6 @@ Course Material/Assignment/Samples/**
 # Course material misc local notes
 Course Material/Misc/
 Course Material/Misc/**
+# Other local files
+Repo Readiness (GitHub).md
+WARP.md
