chore: add implementation_plan.md to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ Course Material/Misc/AI_USAGE_LOG.md
 # Uni-setup misc notes (keep local/untracked)
 Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/
 Assignment 2/reliable_clinical_benchmark/Uni-setup/docs/Misc/**
+Assignment 2/reliable_clinical_benchmark/Uni-setup/implementation_plan.md
 
 # Literature Review sources folder - track structure/organization, ignore content
 # Ignore PDFs, HTML, and extracted content
