--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
@@ -12,6 +12,8 @@ temp/
 # Local scripts not for repo
 scripts/test_extraction.py
 scripts/verify_repetition_removal.py
+scripts/dev/smoke_test.py
+scripts/reporting/convert_notebooks_and_patch.py
 
 # Data and Artifacts (large/derived)
 
