Add pipeline directories for scale-up research
- Include study_a_bias_pipeline, study_a_pipeline, study_b_pipeline, study_c_pipeline
- Update .gitignore to track these directories

--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
@@ -21,6 +21,7 @@ results/
 !results/**/study_a_bias*.jsonl
 processed/*
 !processed/study_a_bias_cleaned_optimized/
+!processed/study_a_bias_pipeline/
 !processed/study_a_pipeline/
 !processed/study_c_pipeline/
 !processed/study_b_pipeline/
