Add explicit gitignore for processed/_archived directory

--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/.gitignore
@@ -26,6 +26,7 @@ processed/*
 !processed/study_c_pipeline/
 !processed/study_b_pipeline/
 !processed/study_b_multiturn_pipeline/
+processed/_archived/
 models/
 offload/
 wandb/
