Ignore local Uni-setup conda env and package dirs

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,10 @@ Assignment 2/reliable_clinical_benchmark/Mac-setup/.coverage
 
 # Local benchmark coverage (Uni-setup)
 Assignment 2/reliable_clinical_benchmark/Uni-setup/.coverage
+Assignment 2/reliable_clinical_benchmark/Uni-setup/.conda-envs/
+Assignment 2/reliable_clinical_benchmark/Uni-setup/.conda-envs/**
+Assignment 2/reliable_clinical_benchmark/Uni-setup/.conda-pkgs/
+Assignment 2/reliable_clinical_benchmark/Uni-setup/.conda-pkgs/**
 
 # Uni-setup run logs (generated artefacts)
 Assignment 2/reliable_clinical_benchmark/Uni-setup/logs/
