Roll out LM-gated worker runtime across Uni studies

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,10 @@ Course Material/Misc/**
 Repo Readiness (GitHub).md
 WARP.md
 ../codex_scratchpad.md
+codex_scratchpad.md
+Assignment 2/reliable_clinical_benchmark/codex_scratchpad.md
+Assignment 2/reliable_clinical_benchmark/codex_scratchpad.json
+Assignment 2/reliable_clinical_benchmark/Uni-setup/swarm/
+Assignment 2/reliable_clinical_benchmark/Uni-setup/swarm/**
+Assignment 2/reliable_clinical_benchmark/Uni-setup/state/
+Assignment 2/reliable_clinical_benchmark/Uni-setup/state/**
