--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,9 @@ Assignment 2/reliable_clinical_benchmark/Uni-setup/swarm/
 Assignment 2/reliable_clinical_benchmark/Uni-setup/swarm/**
 Assignment 2/reliable_clinical_benchmark/Uni-setup/state/
 Assignment 2/reliable_clinical_benchmark/Uni-setup/state/**
+
+# Agent workflows / config
+.agent/
+
+# Benchmark / worker-cutoff misc folders under results (local artefacts)
+Assignment 2/reliable_clinical_benchmark/Uni-setup/results/*/misc/
