deps: add vllm>=0.6.0 to requirements.txt; update ENVIRONMENT.md mh-llm-local-env setup

--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/requirements.txt
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/requirements.txt
@@ -1,4 +1,5 @@
 # Core ML/NLP
+vllm>=0.6.0  # vLLM OpenAI-compatible server for local HF model inference
 transformers==4.40.1
 torch==2.2.1
 accelerate==0.27.2
