--- a/Assignment 2/reliable_clinical_benchmark/Uni-setup/requirements.txt
+++ b/Assignment 2/reliable_clinical_benchmark/Uni-setup/requirements.txt
@@ -19,9 +19,9 @@ evaluate==0.4.1
 rouge-score==0.1.2
 
 # Scientific computing
-numpy==1.26.4
+numpy>=1.26.4
 pandas==2.2.1
-scipy==1.10.1
+scipy>=1.11.0
 scikit-learn==1.4.2
 
 # Visualization
